Ignore tailwind styles

--- a/lefthook.yml
+++ b/lefthook.yml
@@ -7,5 +7,5 @@ pre-commit:
       glob: "*.{js,ts}"
       run: npx eslint --fix {staged_files}
     stylelint:
-      glob: "*.{css}"
+      glob: "src/components/**/*.{css}"
       run: npx stylelint --fix {staged_files}
