--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -4,8 +4,17 @@
     "at-rule-no-unknown": [
       true,
       {
-        "ignoreAtRules": ["extends"]
+        "ignoreAtRules": [
+          "extends",
+          "tailwind",
+          "apply",
+          "variants",
+          "responsive",
+          "screen"
+        ]
       }
-    ]
+    ],
+    "declaration-block-trailing-semicolon": null,
+    "no-descending-specificity": null
   }
 }
